<resources>
    <string name="app_name">Alzheimer</string>

    <string name="loginText">Login</string>
    <string name="registerText">Register</string>
    <string name="reminderMedicineText">Reminder Medicine</string>
    <string name="homeRouteText">Home Route</string>
    <string name="emergencyText">Emergency</string>
    <string name="personalInfoText">Personal Info</string>
    <string name="patientInfoConfigurationText">Patient Configuration</string>
    <string name="messengerText">Messenger</string>
    <string name="NearPharmaciesText">Near Pharmacies</string>
    <string name="notesText">Notes</string>
    <string name="documentsText">documents</string>
    <string name="logOutText">Logout</string>
    <string name="nearbypharmaciesbuttontext">NearbyPharmaciesButtonText</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_note">New Note</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="selectRoute">Select Route</string>
    <string name="create_new_activity">Create New Activity</string>
    <string name="title">Title</string>
    <string name="note_content">Note Content</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="call">Call</string>
    <string name="name">Name</string>
    <string name="BirthDate">Birth Date</string>
    <string name="address">Address</string>
    <string name="licensePlate">License Plate</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="Chat">Chat</string>
    <string name="send">send</string>
    <string name="username">username</string>
    <string name="chat_menu_design_1">design 1</string>
    <string name="chat_menu_design_2">design 2</string>
    <string name="chat_menu_both_designs">both design</string>
    <string name="nearby_pharmacies">Nearby Pharmacies</string>
    <string name="user">User</string>
    <string name="medicine_reminder">Medicine Reminder</string>
</resources>