<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/userButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"

        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:gravity="left|center_vertical"
        android:paddingVertical="65dp"
        android:paddingHorizontal="50dp"
        android:layout_marginTop="30dp"

        android:text="@string/user"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/medicineButton"
        />

    <Button
        android:id="@+id/medicineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/round_button"
        android:drawableLeft="@drawable/ic_baseline_medical_services_24"

        android:gravity="right|center_vertical"

        android:paddingHorizontal="35dp"
        android:paddingVertical="65dp"
        android:text="Medical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/userButton"

        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/emergencyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/emergencyText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/danger_button"
        android:textColor="@color/white"

        android:drawableLeft="@drawable/ic_baseline_warning_24"
        android:gravity="left|center_vertical"
        android:paddingVertical="80dp"
        android:paddingHorizontal="40dp"
        />

    <Button
        android:id="@+id/messengerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/messengerText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/homeRouteButton"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/round_button"

        android:drawableLeft="@drawable/ic_baseline_message_24"
        android:gravity="left|center_vertical"
        android:paddingVertical="65dp"
        android:paddingHorizontal="25dp"
        android:layout_marginBottom="30dp"

        />

    <Button
        android:id="@+id/homeRouteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="Go home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/messengerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/round_button"

        android:drawableLeft="@drawable/ic_baseline_location_on_24"
        android:gravity="left|center_vertical"
        android:paddingVertical="65dp"
        android:paddingHorizontal="35dp"
        android:layout_marginBottom="30dp"
        tools:ignore="MissingConstraints"
        />


    <Button
        android:id="@+id/personalInfoButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"

        android:background="@drawable/round_button"
        android:paddingVertical="40dp"
        android:text="@string/personalInfoText"
        android:visibility="invisible"
        android:layout_marginTop="15dp"

        app:layout_constraintTop_toBottomOf="@id/userButton"
        app:layout_constraintEnd_toStartOf="@id/documentsButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/documentsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:layout_marginHorizontal="15dp"
        android:paddingVertical="40dp"
        android:layout_marginTop="15dp"

        android:text="@string/documentsText"
        app:layout_constraintTop_toBottomOf="@id/userButton"
        app:layout_constraintStart_toEndOf="@id/personalInfoButton"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/notesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:layout_marginHorizontal="15dp"
        android:paddingVertical="40dp"
        android:layout_marginTop="20dp"

        android:text="@string/notesText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/patientInfoConfigurationButton"
        app:layout_constraintTop_toBottomOf="@id/personalInfoButton"
        tools:ignore="MissingConstraints"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/patientInfoConfigurationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:layout_marginHorizontal="15dp"
        android:paddingVertical="40dp"
        android:layout_marginTop="20dp"

        android:text="Patient Config"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/notesButton"
        app:layout_constraintTop_toBottomOf="@id/documentsButton"
        tools:ignore="MissingConstraints"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/reminderMedicineButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/round_button"
        android:layout_marginHorizontal="15dp"
        android:paddingVertical="40dp"

        android:text="@string/medicine_reminder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nearbyPharmaciesButton"
        tools:ignore="MissingConstraints"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/nearbyPharmaciesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/round_button"
        android:layout_marginHorizontal="15dp"
        android:paddingVertical="40dp"

        android:text="@string/nearby_pharmacies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/reminderMedicineButton"
        tools:ignore="MissingConstraints"
        android:visibility="invisible"
        />






</androidx.constraintlayout.widget.ConstraintLayout>