<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notes.EditNoteActivity">

    <TextView
        android:id="@+id/editNoteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />
    <View
        android:id="@+id/editNoteSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/editNoteLabel"
        />

    <TextView
        android:id="@+id/editNoteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/editNoteSeparator"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editNoteTitleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editNoteTitle"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/editNoteContentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_content"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/editNoteTitleInput"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />


    <com.google.android.material.textfield.TextInputEditText
        android:background="@drawable/edit_text_border"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:id="@+id/editNoteContentInput"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/editNoteContentLabel"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/modifyNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editNoteContentInput"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Modify Note"
        />

</androidx.constraintlayout.widget.ConstraintLayout>